Scrollbar correction.

--- a/src/css/nav-menu.css
+++ b/src/css/nav-menu.css
@@ -27,7 +27,7 @@ body, nav, ul, li, p {
 .sidebar {
   background-color: #000;
   width: 200px;
-  height: 100px;
+  height: 200px;
 }
 
 .sidebar a {
